lintian (2.4.3) UNRELEASED; urgency=low

  * checks/files
    + [RG] Detect embedded copies of HTMLPurifier.
    + [RG] Detect embedded copies of the Strophe javascript library.

  * private/refresh-insserv-data:
    + Hardcode the '$all' virtual facility.

 -- Raphael Geissert <geissert@debian.org>  Fri, 02 Jul 2010 15:22:17 -0500

lintian (2.4.2) unstable; urgency=low

  The "Policy 3.9.0" release.

  * Summary of tag changes:
    + Added:
      - arch-wildcard-in-binary-package
      - bad-provided-package-name
      - conflicts-with-version
      - copyright-refers-to-deprecated-bsd-license-file
      - init.d-script-depends-on-unknown-virtual-facility
      - team-upload-has-incorrect-version-number
      - xc-package-type-in-debian-control (pedantic)
    + Removed:
      - arch-any-in-binary-pkg (now in arch-wildcard-in-binary-package)
      - package-type-in-debian-control

  * checks/changes-file.desc:
    + [RA] Add references for file-size-mismatch-in-changes-file and
      checksum-mismatch-in-changes-file.
  * checks/control-file{,.desc}:
    + [RA] Remove package-type-in-debian-control now that dpkg-dev handles
      it as desired by the d-i team.  xc-package-type-in-debian-control
      replaces it as a pedantic check to encourage switching to the
      official name.  Thanks, Raphael Hertzog.
    + [RA] Add reference for debian-control-with-duplicate-fields.
  * checks/copyright-file{,.desc}:
    + [RA] Deprecate references to /usr/share/common-licenses/BSD in
      debian/copyright following the change in Policy 3.8.5.
  * checks/fields{,.desc}:
    + [RA] Allow Breaks without a version if the broken package is a
      virtual package.
    + [RG] Check for invalid package names in provided (virtual)
      packages.
    + [RG] Exclude dash from the depends-on-essential-package checks, as
      per discusion in debian-devel.  (Closes: #587209)
    + [RA] Allow architecture wildcards in build relations and in the