@@ -1,4 +1,7 @@
 E: binaries-embedded-libs: embedded-libjpeg ./usr/bin/libjpeg
 E: binaries-embedded-libs: embedded-libopenjpeg ./usr/bin/libopenjpeg
 E: binaries-embedded-libs: embedded-libpng ./usr/bin/libpng
+E: binaries-embedded-libs: embedded-library ./usr/bin/libbz2: bzip2
+E: binaries-embedded-libs: embedded-library ./usr/bin/libpcre3: pcre3
+E: binaries-embedded-libs: embedded-library ./usr/bin/libtiff: tiff
 E: binaries-embedded-libs: embedded-zlib ./usr/bin/zlib
