@@ -1,5 +1,11 @@
 lintian (2.4.3) UNRELEASED; urgency=low
 
+  * Summary of tag changes:
+    + Added:
+      - embedded-library
+
+  * checks/binaries{,.desc}:
+    + [RG] Detect embedded copies of libbz2, pcre3, and tiff.
   * checks/files
     + [RG] Detect embedded copies of HTMLPurifier.
     + [RG] Detect embedded copies of the Strophe javascript library.
